--- a/flexs.shrink.html
+++ b/flexs.shrink.html
@@ -7,14 +7,28 @@
     <link rel="stylesheet" href="Flexshrink.CSS">
 </head>
 <body>
-    <h1>Flex-shrink: 1
+    <h1>Flex-shrink: 1 <h1>
     <section class="container">
         <div class="item shrink-1">1</div>
         <div class="item shrink-1">2</div>
         <div class="item shrink-1">3</div>
         <div class="item shrink-1">4</div>
     </section>
-    </h1>
+
+    <h1>Flex-shrink: 1 conteudo diferente<h1>
+    <section class="container">
+        <div class="item shrink-1">1</div>
+        <div class="item shrink-1">teste 2</div>
+        <div class="item shrink-1">oi 3</div>
+        <div class="item shrink-1">4</div>
+    </section>
     
+    <h1>Flex-shrink: 1 e 3 conteudo diferente<h1>
+        <section class="container">
+            <div class="item shrink-1">1</div>
+            <div class="item shrink-1">teste 2</div>
+            <div class="item shrink-3">oi 3</div>
+            <div class="item shrink-3">4</div>
+        </section>
 </body>
 </html>
